# Neural_operator

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  fem_progress.txt  pyproject.toml
docs/: bao_cao_giai_doan3_rq_results.md  bao_cao_phase7_gipc_convergence.md  bao_cao_tong_ket_phase3-6.md  bao_cao_tong_ket_phase3-6.pptx  phase5_plan.md  phase6_plan.md
docs/archive/: bao_cao_gate2_chi_phi_groundtruth.md  bao_cao_gate2_kha_thi_1gpu.md  bao_cao_gate3_tien_de3_operator_slip.md  giai_doan_2_poc_neural_operator_vbts.md  xac_minh_tien_de_2_3.md
docs/kse2026/: README.md  main.bbl  main.tex  referee_report.md  references.bib
infra/: Dockerfile.fem  gen_fem_normal_sweep.sh  gen_fem_pilot.sh  gen_fem_sweep.sh  gen_fem_sweep_res32.sh  gen_fem_sweep_res40.sh  gen_uipc_convergence.sh  gen_uipc_sweep.sh  gen_uipc_topup.sh  gen_uipc_trajectory_phase7.sh  run_realistic_downstream.sh  run_realistic_partial_80ep.sh  setup_isaac.sh  verify_realistic_reground.py
scripts/archive/: gate2_groundtruth_cost_check.py  gate2_p0_gpu_check.py  gate3_operator_slip_check.py  isaac_diag.py  isaac_mesh_probe.py  isaac_probe.py  phase3_field2field.py
src/novbts/: __init__.py  models.py  paths.py
src/novbts/groundtruth/: aggregate_sweep.py  aggregate_uipc_convergence.py  aggregate_uipc_replicates.py  data_gen.py  hertz_mindlin.py  ipc_fem.py  isaac_extract_normal.py  isaac_extract_shear.py  tacex_uipc_extract_shear.py
src/novbts/operator/: diff_policy.py  eval_rq.py  fem_benchmark.py  fem_train_compare.py  field2field.py  input_augment.py  inverse_demo.py  loading_history.py  param2field.py  (+2 more)
(+19 files in other folders)
