[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "novbts"
version = "0.1.0"
description = "Neural-operator surrogate for a vision-based tactile sensor (FNO over marker displacement fields)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "fpdf2",
]

[tool.setuptools.packages.find]
where = ["src"]
